--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+     <!-- Title -->
+     <h1>Infinite Scroll</h1>
+     <!-- Loader -->
+     <div class="loader" id="loader">
+         <img src="loader.svg" alt="Loading">
+     </div>
+     <!-- Image Container -->
+     <div class="image-container" id="image-container"></div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
